Calculo de Menos Compras e Mais Compras